--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Top heading  -->
     <section id="heading">
         <div class="logo">
-            <img src="Img/Logo copy.png" width="100px" alt="logo">
+            <img src="img/Logo copy.png" width="100px" alt="logo">
         </div>
             <div class="links">
                 <a href="#">HOME</a>
